--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 3:45:25 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 3:46:08 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -198,41 +198,25 @@ E thru 4</td>
 E thru 7</td>
       <td>Will Zalatoris E
 -2 thru 10</td>
-      <td class="greyout leftborder">Viktor Hovland +3
-E thru 10</td>
+      <td class="greyout leftborder">Viktor Hovland +4
++1 thru 11</td>
       <td class="greyout">Xander Schauffele(W)
 Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Walk 2</td>
-      <td class="bigbold">-14</td>
+      <td class="bigbold">-13</td>
       <td>Scottie Scheffler -10
 -1 thru 4</td>
       <td>Cameron Smith -6
 E thru 4</td>
       <td>Corey Conners -1
 E thru 7</td>
-      <td>Viktor Hovland(W) +3
-E thru 10</td>
+      <td>Viktor Hovland(W) +4
++1 thru 11</td>
       <td class="greyout leftborder">Tyrrell Hatton +17
 +8 (F)</td>
       <td class="greyout">Sam Burns
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Team Steve</td>
-      <td class="bigbold">-13</td>
-      <td>Scottie Scheffler -10
--1 thru 4</td>
-      <td>Cameron Smith(W) -6
-E thru 4</td>
-      <td>Shane Lowry E
-+2 thru 5</td>
-      <td>Viktor Hovland +3
-E thru 10</td>
-      <td class="greyout leftborder">Patrick Cantlay +7
--1 (F)</td>
-      <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
     <tr>
@@ -241,7 +225,7 @@ Missed Cut</td>
       <td>Scottie Scheffler(W) -10
 -1 thru 4</td>
       <td>Rory McIlroy -3
--4 thru 8</td>
+-4 thru 9</td>
       <td>Corey Conners -1
 E thru 7</td>
       <td>Robert MacIntyre +3
@@ -268,22 +252,6 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Santorini Sunsets</td>
-      <td class="bigbold">-12</td>
-      <td>Scottie Scheffler -10
--1 thru 4</td>
-      <td>Rory McIlroy -3
--4 thru 8</td>
-      <td>Justin Thomas(W) -2
--1 thru 6</td>
-      <td>Viktor Hovland +3
-E thru 10</td>
-      <td class="greyout leftborder">Patrick Cantlay +7
--1 (F)</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Jon Hosegood</td>
       <td class="bigbold">-12</td>
       <td>Scottie Scheffler -10
@@ -298,6 +266,38 @@ Missed Cut</td>
 +1 thru 16</td>
       <td class="greyout">Patrick Cantlay +7
 -1 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Team Steve</td>
+      <td class="bigbold">-12</td>
+      <td>Scottie Scheffler -10
+-1 thru 4</td>
+      <td>Cameron Smith(W) -6
+E thru 4</td>
+      <td>Shane Lowry E
++2 thru 5</td>
+      <td>Viktor Hovland +4
++1 thru 11</td>
+      <td class="greyout leftborder">Patrick Cantlay +7
+-1 (F)</td>
+      <td class="greyout">Brooks Koepka
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Santorini Sunsets</td>
+      <td class="bigbold">-11</td>
+      <td>Scottie Scheffler -10
+-1 thru 4</td>
+      <td>Rory McIlroy -3
+-4 thru 9</td>
+      <td>Justin Thomas(W) -2
+-1 thru 6</td>
+      <td>Viktor Hovland +4
++1 thru 11</td>
+      <td class="greyout leftborder">Patrick Cantlay +7
+-1 (F)</td>
+      <td class="greyout">Xander Schauffele
+Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Wilson</td>
@@ -353,7 +353,7 @@ Missed Cut</td>
       <td>Cameron Smith -6
 E thru 4</td>
       <td>Rory McIlroy(W) -3
--4 thru 8</td>
+-4 thru 9</td>
       <td>Justin Thomas -2
 -1 thru 6</td>
       <td>Hideki Matsuyama +3
@@ -396,34 +396,18 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Neil Hardy</td>
-      <td class="bigbold">-6</td>
-      <td>Cameron Smith(W) -6
-E thru 4</td>
-      <td>Justin Thomas -2
--1 thru 6</td>
-      <td>Corey Conners -1
-E thru 7</td>
-      <td>Viktor Hovland +3
-E thru 10</td>
-      <td class="greyout leftborder">Xander Schauffele
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Ez Game Ez Life</td>
       <td class="bigbold">-6</td>
       <td>Rory McIlroy -3
--4 thru 8</td>
+-4 thru 9</td>
       <td>Justin Thomas -2
 -1 thru 6</td>
       <td>Collin Morikawa -1
 -2 thru 9</td>
       <td>Will Zalatoris E
 -2 thru 10</td>
-      <td class="greyout leftborder">Viktor Hovland +3
-E thru 10</td>
+      <td class="greyout leftborder">Viktor Hovland +4
++1 thru 11</td>
       <td class="greyout">Tiger Woods(W) +13
 +6 (F)</td>
     </tr>
@@ -447,7 +431,7 @@ Missed Cut</td>
       <td class="bigbold">Jabby</td>
       <td class="bigbold">-6</td>
       <td>Rory McIlroy -3
--4 thru 8</td>
+-4 thru 9</td>
       <td>Justin Thomas(W) -2
 -1 thru 6</td>
       <td>Corey Conners -1
@@ -460,67 +444,35 @@ E thru 7</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Neil Hardy</td>
+      <td class="bigbold">-5</td>
+      <td>Cameron Smith(W) -6
+E thru 4</td>
+      <td>Justin Thomas -2
+-1 thru 6</td>
+      <td>Corey Conners -1
+E thru 7</td>
+      <td>Viktor Hovland +4
++1 thru 11</td>
+      <td class="greyout leftborder">Xander Schauffele
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Fred Jamieson</td>
-      <td class="bigbold">-6</td>
+      <td class="bigbold">-5</td>
       <td>Scottie Scheffler -10
 -1 thru 4</td>
       <td>Rory McIlroy -3
--4 thru 8</td>
-      <td>Viktor Hovland +3
-E thru 10</td>
+-4 thru 9</td>
       <td>Jon Rahm(W) +4
 -3 (F)</td>
+      <td>Viktor Hovland +4
++1 thru 11</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Baggy Pants</td>
-      <td class="bigbold">-5</td>
-      <td>Cameron Smith -6
-E thru 4</td>
-      <td>Justin Thomas(W) -2
--1 thru 6</td>
-      <td>Shane Lowry E
-+2 thru 5</td>
-      <td>Viktor Hovland +3
-E thru 10</td>
-      <td class="greyout leftborder">Patrick Cantlay +7
--1 (F)</td>
-      <td class="greyout">Brooks Koepka
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Hadrian&#39;s Wall</td>
-      <td class="bigbold">-4</td>
-      <td>Cameron Smith -6
-E thru 4</td>
-      <td>Corey Conners -1
-E thru 7</td>
-      <td>Will Zalatoris E
--2 thru 10</td>
-      <td>Viktor Hovland +3
-E thru 10</td>
-      <td class="greyout leftborder">Jon Rahm(W) +4
--3 (F)</td>
-      <td class="greyout">Patrick Cantlay +7
--1 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Lyle Rattray</td>
-      <td class="bigbold">-4</td>
-      <td>Scottie Scheffler -10
--1 thru 4</td>
-      <td>Corey Conners -1
-E thru 7</td>
-      <td>Viktor Hovland +3
-E thru 10</td>
-      <td>Jon Rahm +4
--3 (F)</td>
-      <td class="greyout leftborder">Patrick Cantlay(W) +7
--1 (F)</td>
-      <td class="greyout">Sam Burns
 Missed Cut</td>
     </tr>
     <tr>
@@ -532,12 +484,44 @@ E thru 4</td>
 E thru 7</td>
       <td>Shane Lowry E
 +2 thru 5</td>
-      <td>Viktor Hovland +3
-E thru 10</td>
-      <td class="greyout leftborder">Hideki Matsuyama +3
+      <td>Hideki Matsuyama +3
++1 thru 11</td>
+      <td class="greyout leftborder">Viktor Hovland +4
 +1 thru 11</td>
       <td class="greyout">Jon Rahm +4
 -3 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Baggy Pants</td>
+      <td class="bigbold">-4</td>
+      <td>Cameron Smith -6
+E thru 4</td>
+      <td>Justin Thomas(W) -2
+-1 thru 6</td>
+      <td>Shane Lowry E
++2 thru 5</td>
+      <td>Viktor Hovland +4
++1 thru 11</td>
+      <td class="greyout leftborder">Patrick Cantlay +7
+-1 (F)</td>
+      <td class="greyout">Brooks Koepka
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Hadrian&#39;s Wall</td>
+      <td class="bigbold">-3</td>
+      <td>Cameron Smith -6
+E thru 4</td>
+      <td>Corey Conners -1
+E thru 7</td>
+      <td>Will Zalatoris E
+-2 thru 10</td>
+      <td>Jon Rahm(W) +4
+-3 (F)</td>
+      <td class="greyout leftborder">Viktor Hovland +4
++1 thru 11</td>
+      <td class="greyout">Patrick Cantlay +7
+-1 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Santorini Sunrises</td>
@@ -556,34 +540,34 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Downhill Down Wind</td>
+      <td class="bigbold">Lyle Rattray</td>
       <td class="bigbold">-3</td>
-      <td>Rory McIlroy -3
--4 thru 8</td>
-      <td>Justin Thomas -2
--1 thru 6</td>
-      <td>Collin Morikawa(W) -1
--2 thru 9</td>
-      <td>Viktor Hovland +3
-E thru 10</td>
-      <td class="greyout leftborder">Tiger Woods +13
-+6 (F)</td>
-      <td class="greyout">Gary Woodland
+      <td>Scottie Scheffler -10
+-1 thru 4</td>
+      <td>Corey Conners -1
+E thru 7</td>
+      <td>Viktor Hovland +4
++1 thru 11</td>
+      <td>Jon Rahm +4
+-3 (F)</td>
+      <td class="greyout leftborder">Patrick Cantlay(W) +7
+-1 (F)</td>
+      <td class="greyout">Sam Burns
 Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Grace</td>
       <td class="bigbold">-3</td>
       <td>Rory McIlroy -3
--4 thru 8</td>
+-4 thru 9</td>
       <td>Corey Conners -1
 E thru 7</td>
       <td>Collin Morikawa -1
 -2 thru 9</td>
       <td>Will Zalatoris E
 -2 thru 10</td>
-      <td class="greyout leftborder">Viktor Hovland +3
-E thru 10</td>
+      <td class="greyout leftborder">Viktor Hovland +4
++1 thru 11</td>
       <td class="greyout">Xander Schauffele(W)
 Missed Cut</td>
     </tr>
@@ -604,10 +588,26 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Downhill Down Wind</td>
+      <td class="bigbold">-2</td>
+      <td>Rory McIlroy -3
+-4 thru 9</td>
+      <td>Justin Thomas -2
+-1 thru 6</td>
+      <td>Collin Morikawa(W) -1
+-2 thru 9</td>
+      <td>Viktor Hovland +4
++1 thru 11</td>
+      <td class="greyout leftborder">Tiger Woods +13
++6 (F)</td>
+      <td class="greyout">Gary Woodland
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Brian McDonald</td>
       <td class="bigbold">-2</td>
       <td>Rory McIlroy -3
--4 thru 8</td>
+-4 thru 9</td>
       <td>Justin Thomas -2
 -1 thru 6</td>
       <td>Corey Conners -1
@@ -616,22 +616,6 @@ E thru 7</td>
 -3 (F)</td>
       <td class="greyout leftborder">Xander Schauffele
 Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Glitter Girl</td>
-      <td class="bigbold">-2</td>
-      <td>Cameron Smith -6
-E thru 4</td>
-      <td>Rory McIlroy -3
--4 thru 8</td>
-      <td>Viktor Hovland +3
-E thru 10</td>
-      <td>Jon Rahm(W) +4
--3 (F)</td>
-      <td class="greyout leftborder">Bubba Watson +7
--1 (F)</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
@@ -668,34 +652,34 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Lorette Hosegood</td>
-      <td class="bigbold">3</td>
-      <td>Rory McIlroy(W) -3
--4 thru 8</td>
-      <td>Dustin Johnson -1
--2 thru 9</td>
-      <td>Viktor Hovland +3
-E thru 10</td>
-      <td>Jon Rahm +4
+      <td class="bigbold">Glitter Girl</td>
+      <td class="bigbold">-1</td>
+      <td>Cameron Smith -6
+E thru 4</td>
+      <td>Rory McIlroy -3
+-4 thru 9</td>
+      <td>Jon Rahm(W) +4
 -3 (F)</td>
-      <td class="greyout leftborder">Patrick Cantlay +7
+      <td>Viktor Hovland +4
++1 thru 11</td>
+      <td class="greyout leftborder">Bubba Watson +7
 -1 (F)</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Glen Wilson</td>
-      <td class="bigbold">5</td>
-      <td>Justin Thomas(W) -2
--1 thru 6</td>
-      <td>Will Zalatoris E
--2 thru 10</td>
-      <td>Viktor Hovland +3
-E thru 10</td>
+      <td class="bigbold">Lorette Hosegood</td>
+      <td class="bigbold">4</td>
+      <td>Rory McIlroy(W) -3
+-4 thru 9</td>
+      <td>Dustin Johnson -1
+-2 thru 9</td>
+      <td>Viktor Hovland +4
++1 thru 11</td>
       <td>Jon Rahm +4
 -3 (F)</td>
-      <td class="greyout leftborder">Sam Burns
-Missed Cut</td>
+      <td class="greyout leftborder">Patrick Cantlay +7
+-1 (F)</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
@@ -716,42 +700,42 @@ E thru 7</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Glen Wilson</td>
+      <td class="bigbold">6</td>
+      <td>Justin Thomas(W) -2
+-1 thru 6</td>
+      <td>Will Zalatoris E
+-2 thru 10</td>
+      <td>Viktor Hovland +4
++1 thru 11</td>
+      <td>Jon Rahm +4
+-3 (F)</td>
+      <td class="greyout leftborder">Sam Burns
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Kash Ahmad</td>
-      <td class="bigbold">5</td>
+      <td class="bigbold">6</td>
       <td>Justin Thomas -2
 -1 thru 6</td>
       <td>Will Zalatoris E
 -2 thru 10</td>
-      <td>Viktor Hovland +3
-E thru 10</td>
       <td>Jon Rahm(W) +4
 -3 (F)</td>
+      <td>Viktor Hovland +4
++1 thru 11</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Walk 1</td>
-      <td class="bigbold">6</td>
-      <td>Collin Morikawa -1
--2 thru 9</td>
-      <td>Will Zalatoris E
--2 thru 10</td>
-      <td>Viktor Hovland(W) +3
-E thru 10</td>
-      <td>Jon Rahm +4
--3 (F)</td>
-      <td class="greyout leftborder">Patrick Cantlay +7
--1 (F)</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Hasbulla</td>
       <td class="bigbold">6</td>
       <td>Rory McIlroy -3
--4 thru 8</td>
+-4 thru 9</td>
       <td>Justin Thomas -2
 -1 thru 6</td>
       <td>Jon Rahm +4
@@ -780,14 +764,30 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Low Golf IQ</td>
+      <td class="bigbold">Walk 1</td>
       <td class="bigbold">7</td>
+      <td>Collin Morikawa -1
+-2 thru 9</td>
+      <td>Will Zalatoris E
+-2 thru 10</td>
+      <td>Viktor Hovland(W) +4
++1 thru 11</td>
+      <td>Jon Rahm +4
+-3 (F)</td>
+      <td class="greyout leftborder">Patrick Cantlay +7
+-1 (F)</td>
+      <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Low Golf IQ</td>
+      <td class="bigbold">8</td>
       <td>Corey Conners -1
 E thru 7</td>
       <td>Shane Lowry(W) E
 +2 thru 5</td>
-      <td>Viktor Hovland +3
-E thru 10</td>
+      <td>Viktor Hovland +4
++1 thru 11</td>
       <td>Joaquin Niemann +5
 +1 thru 17</td>
       <td class="greyout leftborder">Sam Burns
@@ -828,22 +828,6 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">12</td>
-      <td>Justin Thomas(W) -2
--1 thru 6</td>
-      <td>Viktor Hovland +3
-E thru 10</td>
-      <td>Jon Rahm +4
--3 (F)</td>
-      <td>Patrick Cantlay +7
--1 (F)</td>
-      <td class="greyout leftborder">Daniel Berger +15
-+8 (F)</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Roy Jeffrey A</td>
       <td class="bigbold">12</td>
       <td>Justin Thomas -2
@@ -876,12 +860,28 @@ Out With Injury</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Jeff Turnham</td>
+      <td class="bigbold">Al Shulman</td>
       <td class="bigbold">13</td>
+      <td>Justin Thomas(W) -2
+-1 thru 6</td>
+      <td>Viktor Hovland +4
++1 thru 11</td>
+      <td>Jon Rahm +4
+-3 (F)</td>
+      <td>Patrick Cantlay +7
+-1 (F)</td>
+      <td class="greyout leftborder">Daniel Berger +15
++8 (F)</td>
+      <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Jeff Turnham</td>
+      <td class="bigbold">14</td>
       <td>Collin Morikawa -1
 -2 thru 9</td>
-      <td>Viktor Hovland(W) +3
-E thru 10</td>
+      <td>Viktor Hovland(W) +4
++1 thru 11</td>
       <td>Jon Rahm +4
 -3 (F)</td>
       <td>Patrick Reed +7
@@ -889,22 +889,6 @@ E thru 10</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Matt Tummon</td>
-      <td class="bigbold">15</td>
-      <td>Dustin Johnson -1
--2 thru 9</td>
-      <td>Viktor Hovland +3
-E thru 10</td>
-      <td>Jon Rahm +4
--3 (F)</td>
-      <td>Patrick Cantlay +7
--1 (F)</td>
-      <td class="greyout leftborder">Jordan Spieth(W)
-Missed Cut</td>
-      <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
     <tr>
@@ -924,11 +908,27 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Matt Tummon</td>
+      <td class="bigbold">16</td>
+      <td>Dustin Johnson -1
+-2 thru 9</td>
+      <td>Viktor Hovland +4
++1 thru 11</td>
+      <td>Jon Rahm +4
+-3 (F)</td>
+      <td>Patrick Cantlay +7
+-1 (F)</td>
+      <td class="greyout leftborder">Jordan Spieth(W)
+Missed Cut</td>
+      <td class="greyout">Brooks Koepka
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold greyout">Tony Muir</td>
       <td class="bigbold greyout">-</td>
       <td class="greyout">Justin Thomas</td>
-      <td class="greyout">Viktor Hovland</td>
       <td class="greyout">Jon Rahm(W)</td>
+      <td class="greyout">Viktor Hovland</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
       <td class="greyout leftborder">Louis Oosthuizen
@@ -1005,8 +1005,8 @@ Missed Cut</td>
       <td class="bigbold greyout">Chris Bryson</td>
       <td class="bigbold greyout">-</td>
       <td class="greyout">Scottie Scheffler</td>
-      <td class="greyout">Viktor Hovland</td>
       <td class="greyout">Jon Rahm(W)</td>
+      <td class="greyout">Viktor Hovland</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
       <td class="greyout leftborder">Xander Schauffele
