--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 3:51:52 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 3:52:35 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -149,7 +149,7 @@ E thru 4</td>
       <td>Corey Conners -1
 E thru 7</td>
       <td>Will Zalatoris E
--2 thru 10</td>
+-2 thru 11</td>
       <td class="greyout leftborder">Russell Henley +5
 -2 (F)</td>
       <td class="greyout">Brooks Koepka
@@ -157,15 +157,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Doug Muir</td>
-      <td class="bigbold">-15</td>
+      <td class="bigbold">-16</td>
       <td>Scottie Scheffler(W) -10
 -1 thru 4</td>
       <td>Cameron Smith -6
 E thru 4</td>
       <td>Will Zalatoris E
--2 thru 10</td>
-      <td>Hideki Matsuyama +3
-+1 thru 11</td>
+-2 thru 11</td>
+      <td>Hideki Matsuyama +2
+E thru 12</td>
       <td class="greyout leftborder">Xander Schauffele
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
@@ -197,11 +197,43 @@ E thru 4</td>
       <td>Corey Conners -1
 E thru 7</td>
       <td>Will Zalatoris E
--2 thru 10</td>
+-2 thru 11</td>
       <td class="greyout leftborder">Viktor Hovland +4
 +1 thru 11</td>
       <td class="greyout">Xander Schauffele(W)
 Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Stan and Ollie Garch</td>
+      <td class="bigbold">-14</td>
+      <td>Scottie Scheffler -10
+-1 thru 4</td>
+      <td>Justin Thomas(W) -2
+-1 thru 6</td>
+      <td>Corey Conners -1
+E thru 7</td>
+      <td>Shane Lowry -1
++1 thru 6</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Jon Hosegood</td>
+      <td class="bigbold">-13</td>
+      <td>Scottie Scheffler -10
+-1 thru 4</td>
+      <td>Justin Thomas(W) -2
+-1 thru 6</td>
+      <td>Shane Lowry -1
++1 thru 6</td>
+      <td>Will Zalatoris E
+-2 thru 11</td>
+      <td class="greyout leftborder">Tony Finau +5
++1 thru 16</td>
+      <td class="greyout">Patrick Cantlay +7
+-1 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Walk 2</td>
@@ -220,6 +252,22 @@ E thru 7</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Team Steve</td>
+      <td class="bigbold">-13</td>
+      <td>Scottie Scheffler -10
+-1 thru 4</td>
+      <td>Cameron Smith(W) -6
+E thru 4</td>
+      <td>Shane Lowry -1
++1 thru 6</td>
+      <td>Viktor Hovland +4
++1 thru 11</td>
+      <td class="greyout leftborder">Patrick Cantlay +7
+-1 (F)</td>
+      <td class="greyout">Brooks Koepka
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Roy Jeffrey B</td>
       <td class="bigbold">-13</td>
       <td>Scottie Scheffler(W) -10
@@ -234,54 +282,6 @@ E thru 7</td>
 -3 (F)</td>
       <td class="greyout">Patrick Cantlay +7
 -1 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Stan and Ollie Garch</td>
-      <td class="bigbold">-13</td>
-      <td>Scottie Scheffler -10
--1 thru 4</td>
-      <td>Justin Thomas(W) -2
--1 thru 6</td>
-      <td>Corey Conners -1
-E thru 7</td>
-      <td>Shane Lowry E
-+2 thru 5</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Jon Hosegood</td>
-      <td class="bigbold">-12</td>
-      <td>Scottie Scheffler -10
--1 thru 4</td>
-      <td>Justin Thomas(W) -2
--1 thru 6</td>
-      <td>Shane Lowry E
-+2 thru 5</td>
-      <td>Will Zalatoris E
--2 thru 10</td>
-      <td class="greyout leftborder">Tony Finau +5
-+1 thru 16</td>
-      <td class="greyout">Patrick Cantlay +7
--1 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Team Steve</td>
-      <td class="bigbold">-12</td>
-      <td>Scottie Scheffler -10
--1 thru 4</td>
-      <td>Cameron Smith(W) -6
-E thru 4</td>
-      <td>Shane Lowry E
-+2 thru 5</td>
-      <td>Viktor Hovland +4
-+1 thru 11</td>
-      <td class="greyout leftborder">Patrick Cantlay +7
--1 (F)</td>
-      <td class="greyout">Brooks Koepka
-Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Santorini Sunsets</td>
@@ -307,7 +307,7 @@ Missed Cut</td>
       <td>Corey Conners -1
 E thru 7</td>
       <td>Will Zalatoris E
--2 thru 10</td>
+-2 thru 11</td>
       <td>Jon Rahm +4
 -3 (F)</td>
       <td class="greyout leftborder">Xander Schauffele
@@ -317,15 +317,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Andrew Winchester</td>
-      <td class="bigbold">-8</td>
+      <td class="bigbold">-9</td>
       <td>Cameron Smith -6
 E thru 4</td>
       <td>Justin Thomas(W) -2
 -1 thru 6</td>
-      <td>Shane Lowry E
-+2 thru 5</td>
+      <td>Shane Lowry -1
++1 thru 6</td>
       <td>Will Zalatoris E
--2 thru 10</td>
+-2 thru 11</td>
       <td class="greyout leftborder">Matthew Fitzpatrick +2
 -2 thru 17</td>
       <td class="greyout">Brooks Koepka
@@ -333,15 +333,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Tom Davis</td>
-      <td class="bigbold">-8</td>
+      <td class="bigbold">-9</td>
       <td>Cameron Smith -6
 E thru 4</td>
       <td>Dustin Johnson(W) -1
 -2 thru 10</td>
       <td>Corey Conners -1
 E thru 7</td>
-      <td>Shane Lowry E
-+2 thru 5</td>
+      <td>Shane Lowry -1
++1 thru 6</td>
       <td class="greyout leftborder">Patrick Cantlay +7
 -1 (F)</td>
       <td class="greyout">Louis Oosthuizen
@@ -349,15 +349,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Jack Fleck</td>
-      <td class="bigbold">-8</td>
+      <td class="bigbold">-9</td>
       <td>Cameron Smith -6
 E thru 4</td>
       <td>Rory McIlroy(W) -3
 -4 thru 9</td>
       <td>Justin Thomas -2
 -1 thru 6</td>
-      <td>Hideki Matsuyama +3
-+1 thru 11</td>
+      <td>Hideki Matsuyama +2
+E thru 12</td>
       <td class="greyout leftborder">Tiger Woods +13
 +6 (F)</td>
       <td class="greyout">Xander Schauffele
@@ -371,11 +371,27 @@ Missed Cut</td>
       <td>Corey Conners -1
 E thru 7</td>
       <td>Will Zalatoris E
--2 thru 10</td>
+-2 thru 11</td>
       <td>Jon Rahm(W) +4
 -3 (F)</td>
       <td class="greyout leftborder">Webb Simpson +6
 +4 thru 10</td>
+      <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Bill Hunter</td>
+      <td class="bigbold">-7</td>
+      <td>Cameron Smith(W) -6
+E thru 4</td>
+      <td>Justin Thomas -2
+-1 thru 6</td>
+      <td>Corey Conners -1
+E thru 7</td>
+      <td>Hideki Matsuyama +2
+E thru 12</td>
+      <td class="greyout leftborder">Marc Leishman +5
++2 thru 12</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
@@ -405,27 +421,11 @@ Missed Cut</td>
       <td>Collin Morikawa -1
 -2 thru 9</td>
       <td>Will Zalatoris E
--2 thru 10</td>
+-2 thru 11</td>
       <td class="greyout leftborder">Viktor Hovland +4
 +1 thru 11</td>
       <td class="greyout">Tiger Woods(W) +13
 +6 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Bill Hunter</td>
-      <td class="bigbold">-6</td>
-      <td>Cameron Smith(W) -6
-E thru 4</td>
-      <td>Justin Thomas -2
--1 thru 6</td>
-      <td>Corey Conners -1
-E thru 7</td>
-      <td>Hideki Matsuyama +3
-+1 thru 11</td>
-      <td class="greyout leftborder">Marc Leishman +5
-+2 thru 12</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Jabby</td>
@@ -437,11 +437,27 @@ Missed Cut</td>
       <td>Corey Conners -1
 E thru 7</td>
       <td>Will Zalatoris E
--2 thru 10</td>
+-2 thru 11</td>
       <td class="greyout leftborder">Jon Rahm +4
 -3 (F)</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">The Resort</td>
+      <td class="bigbold">-6</td>
+      <td>Cameron Smith(W) -6
+E thru 4</td>
+      <td>Corey Conners -1
+E thru 7</td>
+      <td>Shane Lowry -1
++1 thru 6</td>
+      <td>Hideki Matsuyama +2
+E thru 12</td>
+      <td class="greyout leftborder">Viktor Hovland +4
++1 thru 11</td>
+      <td class="greyout">Jon Rahm +4
+-3 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Neil Hardy</td>
@@ -476,30 +492,14 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">The Resort</td>
-      <td class="bigbold">-4</td>
-      <td>Cameron Smith(W) -6
-E thru 4</td>
-      <td>Corey Conners -1
-E thru 7</td>
-      <td>Shane Lowry E
-+2 thru 5</td>
-      <td>Hideki Matsuyama +3
-+1 thru 11</td>
-      <td class="greyout leftborder">Viktor Hovland +4
-+1 thru 11</td>
-      <td class="greyout">Jon Rahm +4
--3 (F)</td>
-    </tr>
-    <tr>
       <td class="bigbold">Baggy Pants</td>
-      <td class="bigbold">-4</td>
+      <td class="bigbold">-5</td>
       <td>Cameron Smith -6
 E thru 4</td>
       <td>Justin Thomas(W) -2
 -1 thru 6</td>
-      <td>Shane Lowry E
-+2 thru 5</td>
+      <td>Shane Lowry -1
++1 thru 6</td>
       <td>Viktor Hovland +4
 +1 thru 11</td>
       <td class="greyout leftborder">Patrick Cantlay +7
@@ -515,7 +515,7 @@ E thru 4</td>
       <td>Corey Conners -1
 E thru 7</td>
       <td>Will Zalatoris E
--2 thru 10</td>
+-2 thru 11</td>
       <td>Jon Rahm(W) +4
 -3 (F)</td>
       <td class="greyout leftborder">Viktor Hovland +4
@@ -531,7 +531,7 @@ E thru 4</td>
       <td>Corey Conners(W) -1
 E thru 7</td>
       <td>Will Zalatoris E
--2 thru 10</td>
+-2 thru 11</td>
       <td>Jon Rahm +4
 -3 (F)</td>
       <td class="greyout leftborder">Brooks Koepka
@@ -565,7 +565,7 @@ E thru 7</td>
       <td>Collin Morikawa -1
 -2 thru 9</td>
       <td>Will Zalatoris E
--2 thru 10</td>
+-2 thru 11</td>
       <td class="greyout leftborder">Viktor Hovland +4
 +1 thru 11</td>
       <td class="greyout">Xander Schauffele(W)
@@ -585,6 +585,22 @@ E thru 4</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Ron Harrington</td>
+      <td class="bigbold">-3</td>
+      <td>Cameron Smith -6
+E thru 4</td>
+      <td>Corey Conners -1
+E thru 7</td>
+      <td>Talor Gooch +2
+-1 thru 12</td>
+      <td>Hideki Matsuyama +2
+E thru 12</td>
+      <td class="greyout leftborder">Jon Rahm(W) +4
+-3 (F)</td>
+      <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
     <tr>
@@ -620,22 +636,6 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Ron Harrington</td>
-      <td class="bigbold">-2</td>
-      <td>Cameron Smith -6
-E thru 4</td>
-      <td>Corey Conners -1
-E thru 7</td>
-      <td>Talor Gooch +2
--1 thru 12</td>
-      <td>Hideki Matsuyama +3
-+1 thru 11</td>
-      <td class="greyout leftborder">Jon Rahm(W) +4
--3 (F)</td>
-      <td class="greyout">Brooks Koepka
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">New Lu</td>
       <td class="bigbold">-1</td>
       <td>Cameron Smith -6
@@ -643,7 +643,7 @@ E thru 4</td>
       <td>Justin Thomas(W) -2
 -1 thru 6</td>
       <td>Will Zalatoris E
--2 thru 10</td>
+-2 thru 11</td>
       <td>Patrick Cantlay +7
 -1 (F)</td>
       <td class="greyout leftborder">Brooks Koepka
@@ -700,12 +700,28 @@ E thru 7</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Wild Billy Mitchell</td>
+      <td class="bigbold">5</td>
+      <td>Dustin Johnson(W) -1
+-2 thru 10</td>
+      <td>Shane Lowry -1
++1 thru 6</td>
+      <td>Matthew Fitzpatrick +2
+-2 thru 17</td>
+      <td>Tony Finau +5
++1 thru 16</td>
+      <td class="greyout leftborder">Louis Oosthuizen
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Glen Wilson</td>
       <td class="bigbold">6</td>
       <td>Justin Thomas(W) -2
 -1 thru 6</td>
       <td>Will Zalatoris E
--2 thru 10</td>
+-2 thru 11</td>
       <td>Viktor Hovland +4
 +1 thru 11</td>
       <td>Jon Rahm +4
@@ -721,7 +737,7 @@ Missed Cut</td>
       <td>Justin Thomas -2
 -1 thru 6</td>
       <td>Will Zalatoris E
--2 thru 10</td>
+-2 thru 11</td>
       <td>Jon Rahm(W) +4
 -3 (F)</td>
       <td>Viktor Hovland +4
@@ -748,28 +764,12 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Wild Billy Mitchell</td>
-      <td class="bigbold">6</td>
-      <td>Dustin Johnson(W) -1
--2 thru 10</td>
-      <td>Shane Lowry E
-+2 thru 5</td>
-      <td>Matthew Fitzpatrick +2
--2 thru 17</td>
-      <td>Tony Finau +5
-+1 thru 16</td>
-      <td class="greyout leftborder">Louis Oosthuizen
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Walk 1</td>
       <td class="bigbold">7</td>
       <td>Collin Morikawa -1
 -2 thru 9</td>
       <td>Will Zalatoris E
--2 thru 10</td>
+-2 thru 11</td>
       <td>Viktor Hovland(W) +4
 +1 thru 11</td>
       <td>Jon Rahm +4
@@ -782,14 +782,14 @@ Missed Cut</td>
     <tr>
       <td class="bigbold">Low Golf IQ</td>
       <td class="bigbold">8</td>
+      <td>Shane Lowry(W) -1
++1 thru 6</td>
       <td>Corey Conners -1
 E thru 7</td>
-      <td>Shane Lowry(W) E
-+2 thru 5</td>
       <td>Viktor Hovland +4
 +1 thru 11</td>
-      <td>Joaquin Niemann +5
-+1 thru 17</td>
+      <td>Joaquin Niemann +6
++2 (F)</td>
       <td class="greyout leftborder">Sam Burns
 Missed Cut</td>
       <td class="greyout">Brian Harman
@@ -812,6 +812,22 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Roy Jeffrey A</td>
+      <td class="bigbold">11</td>
+      <td>Justin Thomas -2
+-1 thru 6</td>
+      <td>Hideki Matsuyama +2
+E thru 12</td>
+      <td>Jon Rahm(W) +4
+-3 (F)</td>
+      <td>Patrick Cantlay +7
+-1 (F)</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">CRED</td>
       <td class="bigbold">12</td>
       <td>Scottie Scheffler -10
@@ -828,28 +844,12 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Roy Jeffrey A</td>
-      <td class="bigbold">12</td>
-      <td>Justin Thomas -2
--1 thru 6</td>
-      <td>Hideki Matsuyama +3
-+1 thru 11</td>
-      <td>Jon Rahm(W) +4
--3 (F)</td>
-      <td>Patrick Cantlay +7
--1 (F)</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Shane Hosegood</td>
-      <td class="bigbold">13</td>
+      <td class="bigbold">12</td>
       <td>Collin Morikawa(W) -1
 -2 thru 9</td>
-      <td>Hideki Matsuyama +3
-+1 thru 11</td>
+      <td>Hideki Matsuyama +2
+E thru 12</td>
       <td>Jon Rahm +4
 -3 (F)</td>
       <td>Patrick Cantlay +7
