--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 3:51:52 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 3:52:35 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -141,15 +141,15 @@ body {
   <tbody>
     <tr>
       <td class="bigbold">Jon Hosegood</td>
-      <td class="bigbold">-12</td>
+      <td class="bigbold">-13</td>
       <td>Scottie Scheffler -10
 -1 thru 4</td>
       <td>Justin Thomas(W) -2
 -1 thru 6</td>
+      <td>Shane Lowry -1
++1 thru 6</td>
       <td>Will Zalatoris E
--2 thru 10</td>
-      <td>Shane Lowry E
-+2 thru 5</td>
+-2 thru 11</td>
       <td class="greyout leftborder">Tony Finau +5
 +1 thru 16</td>
       <td class="greyout">Patrick Cantlay +7
@@ -168,18 +168,18 @@ E thru 4</td>
 E thru 8</td>
       <td class="greyout leftborder">Viktor Hovland +4
 +1 thru 11</td>
-      <td class="greyout">Joaquin Niemann +5
-+1 thru 17</td>
+      <td class="greyout">Joaquin Niemann +6
++2 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Bryson</td>
-      <td class="bigbold">-8</td>
+      <td class="bigbold">-9</td>
       <td>Scottie Scheffler(W) -10
 -1 thru 4</td>
+      <td>Shane Lowry -1
++1 thru 6</td>
       <td>Will Zalatoris E
--2 thru 10</td>
-      <td>Shane Lowry E
-+2 thru 5</td>
+-2 thru 11</td>
       <td>Jon Rahm +4
 -3 (F)</td>
       <td class="greyout leftborder">Brooks Koepka
@@ -189,15 +189,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Andrew Winchester</td>
-      <td class="bigbold">-8</td>
+      <td class="bigbold">-9</td>
       <td>Cameron Smith -6
 E thru 4</td>
       <td>Justin Thomas(W) -2
 -1 thru 6</td>
-      <td>Shane Lowry E
-+2 thru 5</td>
+      <td>Shane Lowry -1
++1 thru 6</td>
       <td>Will Zalatoris E
--2 thru 10</td>
+-2 thru 11</td>
       <td class="greyout leftborder">Matthew Fitzpatrick +2
 -2 thru 17</td>
       <td class="greyout">Brooks Koepka
@@ -253,13 +253,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Derrick Shea</td>
-      <td class="bigbold">1</td>
+      <td class="bigbold">0</td>
       <td>Justin Thomas(W) -2
 -1 thru 6</td>
       <td>Corey Conners -1
 E thru 7</td>
-      <td>Shane Lowry E
-+2 thru 5</td>
+      <td>Shane Lowry -1
++1 thru 6</td>
       <td>Jon Rahm +4
 -3 (F)</td>
       <td class="greyout leftborder">Patrick Cantlay +7
@@ -275,7 +275,7 @@ E thru 7</td>
       <td>Collin Morikawa -1
 -2 thru 9</td>
       <td>Will Zalatoris E
--2 thru 10</td>
+-2 thru 11</td>
       <td>Tony Finau +5
 +1 thru 16</td>
       <td class="greyout leftborder">Daniel Berger +15
