--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 4:06:12 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 4:06:55 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -220,6 +220,22 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Scott Williamson</td>
+      <td class="bigbold">-4</td>
+      <td>Sungjae Im -4
+E thru 7</td>
+      <td>Justin Thomas -3
+-2 thru 7</td>
+      <td>Collin Morikawa -1
+-2 thru 10</td>
+      <td>Viktor Hovland(W) +4
++1 thru 12</td>
+      <td class="greyout leftborder">Patrick Cantlay +7
+-1 (F)</td>
+      <td class="greyout">Brooks Koepka
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">John Nixon</td>
       <td class="bigbold">-4</td>
       <td>Cameron Smith(W) -6
@@ -233,22 +249,6 @@ E thru 5</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Scott Williamson</td>
-      <td class="bigbold">-3</td>
-      <td>Justin Thomas -3
--2 thru 7</td>
-      <td>Sungjae Im -3
-+1 thru 6</td>
-      <td>Collin Morikawa -1
--2 thru 10</td>
-      <td>Viktor Hovland(W) +4
-+1 thru 12</td>
-      <td class="greyout leftborder">Patrick Cantlay +7
--1 (F)</td>
-      <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
     <tr>
